# analitics_site

./: .gitignore  build.sh  db.sqlite3  makefile  manage.py  pyproject.toml
sales_analitics_site/: asgi.py  settings.py  urls.py  wsgi.py
sales_analitics_site/templates/: base.html  index.html  users.html
sales_analitics_site/templates/components/: navbar.html
sales_analitics_site/user/: admin.py  models.py
templates/: base.html  index.html
templates/components/: footer.html  navbar.html
