[tool.poetry]
name = "sales-analitics-site"
version = "0.1.0"
description = ""
authors = ["Krushovice <Kickstar69@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sales_analitics_site"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
